@@ -22,6 +22,7 @@ Fixed bugs
 - drop fixed resultants when copying pseudoboolean constraint to avert segmentation fault
 - correct matrix entry when resolving aggregated variables in checkSystemGF2() of cons_xor.c
 - corrected symmetry detection graph of cons_and.c, cons_or.c, and cons_xor.c
+- correct redundancy filter in consdataCreateRedundant() of cons_bounddisjunction.c
 
 Build system
 ------------
